Setup testing db, setup dbs in general, added maven profile. Added very basic query to query for distances

--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:postgresql://localhost/vibe
+spring.datasource.url=jdbc:postgresql://localhost/vibe-test
 spring.datasource.username=liuben10
 spring.jpa.generate-ddl=true
