--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,8 @@
         <maven.compiler.target>${java.version}</maven.compiler.target> <!-- REQUIRED -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <appengine.maven.plugin>1.9.59</appengine.maven.plugin>
+        <flyway.url>jdbc:postgresql://localhost/vibe</flyway.url>
+        <flyway.user>liuben10</flyway.user>
     </properties>
 
     <repositories>
@@ -64,9 +66,15 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-redis</artifactId>
-            <version>2.0.1.RELEASE</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>1.5.8.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.4-1206-jdbc42</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -74,10 +82,35 @@
             <version>1.16.18</version>
             <optional>true</optional>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.dogote/json-patch -->
+        <dependency>
+            <groupId>io.dogote</groupId>
+            <artifactId>json-patch</artifactId>
+            <version>1.15</version>
+        </dependency>
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>test</id>
+            <properties>
+                <flyway.url>jdbc:postgresql://localhost/vibe-test</flyway.url>
+                <flyway.user>liuben10</flyway.user>
+            </properties>
+        </profile>
+    </profiles>
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <version>4.2.0</version>
+                <configuration>
+                    <url>${flyway.url}</url>
+                    <user>${flyway.user}</user>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
